@@ -40,6 +40,7 @@ Version 0.21.0 Beta:
 - #2109564: POW and ATAN2 were not checking operand sizes in the SSE emitter - thanks Bryan S. for fix (jeffm)
 - Fix Win32 DirectX gfx driver crashing when DirectX not working/available (DrV)
 - Slightly improved expression/typename disambiguation in LEN/SIZEOF/TYPEOF (counting_pine)
+- RANDOMIZE (with no parameters) now uses a default seed that changes more than once a second (counting_pine)
 
 
 Version 0.20.0 Beta:
